          and provides further guidance how to proceed.

        - It was previously not possible to clone a branch / database
          anonymously; this has been fixed.

        - automate identified was broken in 0.40 when used over stdio, i.e.
          the output of the command did not get into the right output
          channel; this has been fixed

        New features

        - Add 'automate show_conflicts' command

        - Add 'automate get_workspce_root' command

        Internal

Fri Apr 11 22:50:44 UTC 2008

        0.40 release.

        Changes

        - The vim merger has been improved and now uses diff3 to merge
          non-conflict changes automatically before executing vimdiff.

        - Values used with the --depth option used to control recursion with
          node and path restrictions have changed. Using --depth=0 now means
          exactly the specified directories and *not* their children. Using
          --depth=1 now means the specified directories and their immediate
          children. Previously --depth=0 included children and --depth=1
          included grandchildren and it was not possible to exclude children
          using --depth.  The simple fix for anyone using --depth is to add 1 to
          the values they are using.

        - Document that ssh: and file: sync transports are not supported on
          native Win32.

        Bugs fixed

        - `commit' now uses keydir specified in _MTN/options

        - duplicate name conflicts now show a proper error message, even if
          a parent directory got renamed as well. In that case, the error
          message now shows both names for the directory and the offending
          file name.

        New features

        - The bare parent selector 'p:' can now be used in a workspace to
          query the parent(s) of the workspace' base revision. This is
          equivalent to "mtn au select p:`mtn au get_base_workspace_revision`".
