@@ -1,0 +1,60 @@
+start ---------------------------------------------------
+start: sync_type = push
+start: remote_keyname = tester@test.net
+start: includes = testbranch
+start: excludes = 
+sent pubkey: tester@test.net
+sent revision: new_id    = REV1
+sent revision: revision  = format_version "1"
+
+new_manifest [MAN1]
+
+old_revision []
+
+add_dir ""
+
+add_file "testfile"
+ content [FILE1]
+
+sent revision: cert.name  = author
+sent revision: cert.value = tester@test.net
+sent revision: cert.key   = tester@test.net
+sent revision: cert.name  = branch
+sent revision: cert.value = testbranch
+sent revision: cert.key   = tester@test.net
+sent revision: cert.name  = changelog
+sent revision: cert.value = blah-blah
+
+sent revision: cert.key   = tester@test.net
+sent revision: cert.name  = date
+sent revision: cert.value = DATE1
+sent revision: cert.key   = tester@test.net
+sent revision: new_id    = REV2
+sent revision: revision  = format_version "1"
+
+new_manifest [MAN2]
+
+old_revision [REV1]
+
+patch "testfile"
+ from [FILE1]
+   to [FILE2]
+
+sent revision: cert.name  = author
+sent revision: cert.value = tester@test.net
+sent revision: cert.key   = tester@test.net
+sent revision: cert.name  = branch
+sent revision: cert.value = testbranch
+sent revision: cert.key   = tester@test.net
+sent revision: cert.name  = changelog
+sent revision: cert.value = blah-blah
+
+sent revision: cert.key   = tester@test.net
+sent revision: cert.name  = date
+sent revision: cert.value = DATE2
+sent revision: cert.key   = tester@test.net
+end: status = 200
+end: certs in/out = 0/8
+end: revs in/out = 0/2
+end: keys in/out = 0/1
+end -----------------------------------------------------
